--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,9 @@
----
 kind: pipeline
-type: docker
 name: default
 
 steps:
-- name: backend
-  image: python:3.6
+- name: test
+  image: python
   commands:
   - pip install -r requirements.txt
   - python -m pytest
