--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,10 @@
 kind: pipeline
+type: docker
 name: default
 
 steps:
 - name: test
-  image: python
+  image: python:3.6
   commands:
   - pip install -r requirements.txt
   - python -m pytest
