--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,6 @@
-kind: pipeline
-type: docker
-name: default
-
-steps:
-- name: test
-  image: python:3.6
-  commands:
-  - pip install -r requirements.txt
-  - python -m pytest
+pipeline:
+  test:
+    image: python:3.5.1-alpine
+    commands:
+      - pip install -r requirements.txt
+      - python -m pytest
