--- a/.drone.yml
+++ b/.drone.yml
@@ -3,5 +3,4 @@ pipeline:
     image: python:3.5.1-alpine
     commands:
       - pip install -r requirements.txt
-      - pip install pytest
-      - python -m pytest
+      - pytest
