--- a/.drone.yml
+++ b/.drone.yml
@@ -2,5 +2,5 @@ pipeline:
   test:
     image: python:3.5.1-alpine
     commands:
-      - pip install -r requirements.txt
-      - pytest
+    - pip install -r requirements.txt
+    - python -m pytest
