--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   test:
-    image: python:3.5.1-alpine
+    image: python:3.6
     commands:
     - pip install -r requirements.txt
     - python -m pytest
